# RustMate_Rust-Chess-Engine

./: .gitignore  README.md
.github/workflows/: rust-ci.yml
ai-engine/: Cargo.toml  rustfmt.toml
ai-engine/src/: game_controller.rs  global_state.rs  main.rs
ai-engine/src/ai/: ai_player.rs  ai_utils.rs  constants.rs  mod.rs  transposition_table.rs
ai-engine/src/common/: board_piece.rs  board_utils.rs  contants.rs  enums.rs  fen_utils.rs  mod.rs  piece.rs  piece_move.rs  piece_utils.rs
ai-engine/src/constants/: constants.rs
ai-engine/src/dto/: dtos.rs  piece_dto.rs  piece_move_dto.rs
ai-engine/src/game/: board.rs  board_fen_utils.rs  board_state.rs  contants.rs  fen_utils.rs  mod.rs  move_generator.rs  move_generator_helper.rs  moves_counter.rs  zobrist.rs  zobrist_utils.rs
ai-engine/src/game_bit_board/: _move.rs  bitwise_utils.rs  board.rs  board_utils.rs  constants.rs  enums.rs  mod.rs  move_contants.rs  move_utils.rs  moves_counter.rs  positions.rs  utils.rs
ai-engine/src/game_bit_board/_move/: _move.rs  mod.rs  move_utils.rs  moves_counter.rs
ai-engine/src/game_bit_board/move_generator/: attack_data.rs  contants.rs  magics.rs  mod.rs  move_generator.rs  random.rs  raw_move_generator.rs  utils.rs
ai-engine/src/game_bit_board/utils/: bitwise_utils.rs  board_utils.rs  mod.rs  utils.rs
ai-engine/src/game_bit_board/zobrist/: mod.rs  zobrist.rs  zobrist_utils.rs
api/src/game/: flask_app.py  main.py
rust-mate-web/: package.json
rust-mate-web/src/: App.tsx
rust-mate-web/src/Board/: Board.tsx  BoardPiece.tsx  (+5 more)
web-application/: package-lock.json
(+13 files in other folders)
